@@ -9,6 +9,8 @@ Key:
 
 v0.9-1.5.2
  + Added Admin Chat to modchannel bridge for mcMMO.
+ + Added '/farion list' command to list all users in the connected IRC channel in game.
+ + Added 'farion.list' permission for the '/farion list' command, defaults to true.
  ! Update for compatibility for 1_5_R3 package releases.
  ! Changed IRC library from pircbot-ssl to pircbotx 1.9
 
